--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@
 
 html,
 body {
+   position: fixed ; 
+  min-height: 100vh;
+  min-width: 100vw;
+
+  overflow: hidden ;
   padding: 0;
   margin: 0;
   font-family: var(--default-font) !important;
@@ -50,13 +55,6 @@ a {
   background: var(--button-secondary-background-color) ;
   border-radius: 5px;
 }
-
-
-
-
-
-
-
 
 [type=button], 
 [type=reset], 
